--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>网抑云 |　algerkong</title>
     <link
       rel="stylesheet"
       href="//at.alicdn.com/t/font_2685283_5bo4ekd5wh.css"
