✨ feat: 修改样式和启动命令

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="./public/icon/iconfont.css"
     />
     <link rel="stylesheet" href="./public/css/animate.css" />
+    <link rel="stylesheet" href="./public/css/base.css" />
     <style>
       :root {
         --animate-delay: 0.5s;
