--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>网抑云 |　algerkong</title>
-    <link
-      rel="stylesheet"
-      href="./public/icon/iconfont.css"
-    />
-    <link rel="stylesheet" href="./public/css/animate.css" />
-    <link rel="stylesheet" href="./public/css/base.css" />
-    <style>
-      :root {
-        --animate-delay: 0.5s;
-      }
-    </style>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>网抑云 |　algerkong</title>
+  <link rel="manifest" href="./public/manifest.json" />
+  <link rel="stylesheet" href="./public/icon/iconfont.css" />
+  <link rel="stylesheet" href="./public/css/animate.css" />
+  <link rel="stylesheet" href="./public/css/base.css" />
+  <style>
+    :root {
+      --animate-delay: 0.5s;
+    }
+  </style>
   </head>
 
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
