--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
   <meta charset="UTF-8" />
@@ -15,7 +15,7 @@
       --animate-delay: 0.5s;
     }
   </style>
-  </head>
+</head>
 
 <body>
   <div id="app"></div>
