--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>网抑云 |　algerkong</title>
-  <link rel="manifest" href="./public/manifest.json" />
-  <link rel="stylesheet" href="./public/icon/iconfont.css" />
-  <link rel="stylesheet" href="./public/css/animate.css" />
-  <link rel="stylesheet" href="./public/css/base.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  
+  <!-- SEO 元数据 -->
+  <title>网抑云音乐 | AlgerKong ｜ AlgerMusicPlayer</title>
+  <meta name="description" content="AlgerMusicPlayer 网抑云音乐 基于 网易云音乐API 的一款免费的在线音乐播放器，支持在线播放、歌词显示、音乐下载等功能。提供海量音乐资源，让您随时随地享受音乐。" />
+  <meta name="keywords" content="AlgerMusic, AlgerMusicPlayer, 网抑云, 音乐播放器, 在线音乐, 免费音乐, 歌词显示, 音乐下载, AlgerKong, 网易云音乐" />
+
+  <!-- 作者信息 -->
+  <meta name="author" content="AlgerKong" />
+  <meta name="author-url" content="https://github.com/algerkong" />
+  
+  <!-- PWA 相关 -->
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="网抑云音乐" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  
+  <!-- 资源预加载 -->
+  <link rel="preload" href="/icon/iconfont.css" as="style" />
+  <link rel="preload" href="/css/animate.css" as="style" />
+  <link rel="preload" href="/css/base.css" as="style" />
+  
+  <!-- 样式表 -->
+  <link rel="stylesheet" href="/icon/iconfont.css" />
+  <link rel="stylesheet" href="/css/animate.css" />
+  <link rel="stylesheet" href="/css/base.css" />
+
+  <!-- 动画配置 -->
   <style>
     :root {
       --animate-delay: 0.5s;
@@ -19,7 +43,32 @@
 
 <body>
   <div id="app"></div>
+  <!-- 收款码图片预加载 -->
+  <link rel="preload" as="image" href="https://github.com/algerkong/algerkong/blob/main/alipay.jpg?raw=true" />
+  <link rel="preload" as="image" href="https://github.com/algerkong/algerkong/blob/main/wechat.jpg?raw=true" />
   <script type="module" src="/src/main.ts"></script>
+  
+  <!-- 结构化数据 -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org", 
+      "@type": "WebApplication",
+      "name": "网抑云音乐",
+      "applicationCategory": "MultimediaApplication",
+      "operatingSystem": "Web, Windows, MacOS",
+      "author": {
+        "@type": "Person",
+        "name": "AlgerKong",
+        "url": "https://github.com/algerkong"
+      },
+      "description": "一款免费的在线音乐播放器，支持在线播放、歌词显示、音乐下载等功能。",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "CNY"
+      }
+    }
+  </script>
 </body>
 
 </html>
