✨ feat: 修改下载地址

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="/icon/iconfont.css" />
   <link rel="stylesheet" href="/css/animate.css" />
   <link rel="stylesheet" href="/css/base.css" />
+  <script defer src="https://cn.vercount.one/js"></script>
 
   <!-- 动画配置 -->
   <style>
@@ -43,6 +44,12 @@
 
 <body>
   <div id="app"></div>
+
+<div style="display: none;">
+  Total Page View <span id="vercount_value_page_pv">Loading</span>
+  Total Visits <span id="vercount_value_site_pv">Loading</span>
+  Site Total Visitors <span id="vercount_value_site_uv">Loading</span>
+</div>
   <!-- 收款码图片预加载 -->
   <link rel="preload" as="image" href="https://github.com/algerkong/algerkong/blob/main/alipay.jpg?raw=true" />
   <link rel="preload" as="image" href="https://github.com/algerkong/algerkong/blob/main/wechat.jpg?raw=true" />
