✨ feat: 点击下一首自动播放，优化 https问题

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 
     <!-- SEO 元数据 -->
     <title>网抑云音乐 | AlgerKong ｜ AlgerMusicPlayer</title>
