--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,27 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="assets/logo.png">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
     <!-- SEO 元数据 -->
-    <title>网抑云音乐 | AlgerKong ｜ AlgerMusicPlayer</title>
+    <title>网抑云音乐 | SizeMusicPlayer</title>
     <meta
       name="description"
-      content="AlgerMusicPlayer 网抑云音乐 基于 网易云音乐API 的一款免费的在线音乐播放器，支持在线播放、歌词显示、音乐下载等功能。提供海量音乐资源，让您随时随地享受音乐。"
+      content="SizeMusicPlayer 网抑云音乐 基于 网易云音乐API 的一款免费的在线音乐播放器，支持在线播放、歌词显示、音乐下载等功能。提供海量音乐资源，让您随时随地享受音乐。"
     />
     <meta
       name="keywords"
-      content="AlgerMusic, AlgerMusicPlayer, 网抑云, 音乐播放器, 在线音乐, 免费音乐, 歌词显示, 音乐下载, AlgerKong, 网易云音乐"
+      content="SizeMusic, SizeMusicPlayer, 网抑云, 音乐播放器, 在线音乐, 免费音乐, 歌词显示, 音乐下载, AlgerKong, 网易云音乐"
     />
 
     <!-- 作者信息 -->
-    <meta name="author" content="AlgerKong" />
-    <meta name="author-url" content="https://github.com/algerkong" />
+    <meta name="author" content="SizeMusic" />
+    <meta name="author-url" content="https://music.sizeof.top" />
 
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="网抑云音乐" />
     <!-- 资源预加载 -->
