feat: 添加统计脚本

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -9,23 +9,23 @@
     />
 
     <!-- SEO 元数据 -->
-    <title>网抑云音乐 | AlgerKong ｜ AlgerMusicPlayer</title>
+    <title>AlgerMusicPlayer ｜ algerkong</title>
     <meta
       name="description"
-      content="AlgerMusicPlayer 网抑云音乐 基于 网易云音乐API 的一款免费的在线音乐播放器，支持在线播放、歌词显示、音乐下载等功能。提供海量音乐资源，让您随时随地享受音乐。"
+      content="AlgerMusicPlayer 网抑云音乐 基于 API 的一款免费的在线音乐播放器，支持在线播放、歌词显示、音乐下载等功能。提供海量音乐资源，让您随时随地享受音乐。"
     />
     <meta
       name="keywords"
-      content="AlgerMusic, AlgerMusicPlayer, 网抑云, 音乐播放器, 在线音乐, 免费音乐, 歌词显示, 音乐下载, AlgerKong, 网易云音乐"
+      content="AlgerMusic, AlgerMusicPlayer, 网抑云, 音乐播放器, 在线音乐, 免费音乐, 歌词显示, 音乐下载, AlgerKong, algerkong"
     />
 
     <!-- 作者信息 -->
-    <meta name="author" content="AlgerKong" />
+    <meta name="author" content="algerkong" />
     <meta name="author-url" content="https://github.com/algerkong" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="网抑云音乐" />
+
     <!-- 资源预加载 -->
     <link rel="preload" href="./assets/icon/iconfont.css" as="style" />
     <link rel="preload" href="./assets/css/base.css" as="style" />
@@ -34,6 +34,25 @@
     <link rel="stylesheet" href="./assets/icon/iconfont.css" />
     <link rel="stylesheet" href="./assets/css/base.css" />
 
+    <!-- 百度统计 -->
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?75a7ee3d3875dfdd2fe9d134883ddcbd";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?27b3850e627d266b20b38cce19af18f7";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
     <!-- 动画配置 -->
     <style>
       :root {
