--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -37,19 +37,19 @@
     <!-- 百度统计 -->
     <script>
       var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?75a7ee3d3875dfdd2fe9d134883ddcbd";
-        var s = document.getElementsByTagName("script")[0]; 
+      (function () {
+        var hm = document.createElement('script');
+        hm.src = 'https://hm.baidu.com/hm.js?75a7ee3d3875dfdd2fe9d134883ddcbd';
+        var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(hm, s);
       })();
     </script>
     <script>
       var _hmt = _hmt || [];
-      (function() {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?27b3850e627d266b20b38cce19af18f7";
-        var s = document.getElementsByTagName("script")[0]; 
+      (function () {
+        var hm = document.createElement('script');
+        hm.src = 'https://hm.baidu.com/hm.js?27b3850e627d266b20b38cce19af18f7';
+        var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(hm, s);
       })();
     </script>
